--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
   padding-top: 72px; /* Высота header */
   background: var(--background);
   color: var(--text);
+  transition: background 0.2s;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 } 
