--- a/src/app/components/BackedBest/Carusel/carousel.module.css
+++ b/src/app/components/BackedBest/Carusel/carousel.module.css
@@ -1,9 +1,55 @@
+.wrapperList {
+  position: relative;
+}
+
+.wrapperList::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: 2;
+  width: 188px;
+  background: linear-gradient(90deg, #000000 0%, rgba(0,0,0, 0) 100%);
+}
+
+.wrapperList::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  height: 100%;
+  z-index: 2;
+  width: 188px;
+  background: linear-gradient(270deg, #000000 0%, rgba(0,0,0, 0) 100%);
+}
+
 .list {
+  position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
   row-gap: 24px;
   width: 100%;
   max-width: 3198px;
-  overflow: auto;
+  transform: translateX(187px);
+  z-index: 1;
+  animation: moveList 20s cubic-bezier(0.65, 0.1, 0.65, 1) infinite;
+}
+
+@keyframes moveList {
+  0% {
+    transform: translateX(187px);
+  }
+  25% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(-100%);
+  }
+  75% {
+    transform: translateX(187px);
+  }
+  100% {
+    transform: translateX(187px);
+  }
 }
