--- a/src/app/components/BackedBest/Carusel/carousel.module.css
+++ b/src/app/components/BackedBest/Carusel/carousel.module.css
@@ -1,5 +1,6 @@
 .wrapperList {
   position: relative;
+  overflow: hidden;
 }
 
 .wrapperList::before {
@@ -28,10 +29,9 @@
   position: relative;
   display: flex;
   align-items: center;
-  row-gap: 24px;
-  width: 100%;
+  column-gap: 24px;
+  width: calc(100% + 24px);
   max-width: 3198px;
-  transform: translateX(187px);
   z-index: 1;
   animation: moveList 20s cubic-bezier(0.65, 0.1, 0.65, 1) infinite;
 }
@@ -51,5 +51,81 @@
   }
   100% {
     transform: translateX(187px);
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  @keyframes moveList {
+    0% {
+      transform: translateX(87px);
+    }
+    25% {
+      transform: translateX(-155%);
+    }
+    50% {
+      transform: translateX(-155%);
+    }
+    75% {
+      transform: translateX(87px);
+    }
+    100% {
+      transform: translateX(87px);
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .wrapperList::before {
+    width: 138px;
+  }
+  
+  .wrapperList::after {
+    width: 138px;
+  }
+
+  @keyframes moveList {
+    0% {
+      transform: translateX(57px);
+    }
+    25% {
+      transform: translateX(-215%);
+    }
+    50% {
+      transform: translateX(-215%);
+    }
+    75% {
+      transform: translateX(57px);
+    }
+    100% {
+      transform: translateX(57px);
+    }
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .wrapperList::before {
+    width: 98px;
+  }
+  
+  .wrapperList::after {
+    width: 98px;
+  }
+
+  @keyframes moveList {
+    0% {
+      transform: translateX(20px);
+    }
+    25% {
+      transform: translateX(-215%);
+    }
+    50% {
+      transform: translateX(-215%);
+    }
+    75% {
+      transform: translateX(20px);
+    }
+    100% {
+      transform: translateX(20px);
+    }
   }
 }
