--- a/src/app/components/Subscriptions/subscriptions.module.css
+++ b/src/app/components/Subscriptions/subscriptions.module.css
@@ -9,19 +9,20 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border: 4px solid #171717;
   border-radius: 16px;
   padding: 32px;
   width: 344px;
   min-width: 344px;
   height: 320px;
+  border: 4px solid #f7f7f7;
+  background: #f6f6f6;
 }
 
 .title {
   margin-top: 26px;
   font-weight: 400;
   font-size: 24px;
-  color: #ffffff;
+  /* color: #ffffff; */
 }
 
 .buttonWrap {
@@ -98,4 +99,12 @@
     width: 100%;
     min-width: none;
   }
+}
+
+.isDark .audit {
+  border: 4px solid #171717;
+  background: #000000;
+}
+
+.isDark .title {
 }
