--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,11 @@
   min-height: 100svh;
   padding: 80px;
   gap: 64px;
-  font-family: var(--font-geist-sans);
+  font-family: var('--font-syne');
+}
+
+.main * {
+  font-family: 'Syne';
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,7 +39,7 @@
 }
 
 .main ol {
-  font-family: var(--font-geist-mono);
+  font-family: var('--font-syne');
   padding-left: 0;
   margin: 0;
   font-size: 14px;
@@ -49,7 +53,7 @@
 }
 
 .main code {
-  font-family: inherit;
+  font-family: var('--font-syne');
   background: var(--gray-alpha-100);
   padding: 2px 4px;
   border-radius: 4px;
