--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,11 +13,11 @@
   min-height: 100svh;
   padding: 80px;
   gap: 64px;
-  font-family: var('--font-syne');
+  font-family: var("--font-syne");
 }
 
 .main * {
-  font-family: 'Syne';
+  font-family: "Syne";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -39,7 +39,7 @@
 }
 
 .main ol {
-  font-family: var('--font-syne');
+  font-family: var("--font-syne");
   padding-left: 0;
   margin: 0;
   font-size: 14px;
@@ -53,7 +53,7 @@
 }
 
 .main code {
-  font-family: var('--font-syne');
+  font-family: var("--font-syne");
   background: var(--gray-alpha-100);
   padding: 2px 4px;
   border-radius: 4px;
